--- a/index.css
+++ b/index.css
@@ -1,97 +1,281 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+a{
+    text-decoration: none;
 }
 body {
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
 }
-body>h1{
+
+body>h1 {
     margin: 15px 0;
+    color: brown;
 }
-body>p{
+
+body>p {
     margin: 10px 0;
     text-align: center;
+}
+h2{
+    color: brown;
 }
 p {
     font-size: 18px;
 }
-.banner-img{
+p>a{
+    color: rgb(136, 67, 67);
+    font-weight: 700;
+}
+.banner-img {
     background-image: url('./images/coffee-beans.jpg');
     height: 50px;
     display: flex;
     padding: 30px;
 }
-.banner-img>h1{
+
+.banner-img>h1 {
     font-size: 50px;
     color: white;
 }
-.navbar{
-    background-color: red;
+
+.navbar {
+    background-color: brown;
     list-style: none;
     display: flex;
+    padding: 10px;
     justify-content: space-evenly;
-    padding: 10px 0;
 }
-.navbar>li{
+
+.nav>li>a {
+    padding: 10px 30px;
     color: white;
 }
+
+.nav>li>a:hover {
+    background-color: black;
+    height: 100%;
+}
+
 .main-div {
     display: flex;
 }
 
-.content-div>p,.para>p {
+.content-div>p,
+.para>p {
     font-size: 18px;
     text-align: justify;
     padding: 20px;
 }
 
 blockquote {
-    background-color: sandybrown;
+    background-color: rgb(204, 145, 94);
     font-size: 18px;
-    padding: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    height: fit-content;
+    padding: 30px 50px;
     text-align: center;
+    width: 100%;
+    font-weight: 800;
 }
+
 .para {
     display: flex;
 }
-.footer{
-    background-color: transparent;
+
+.main-img {
+    height: 150px;
 }
-.footer>li{
+
+.para>p {
+    font-size: 18px;
+    width: 100%;
+    text-align: left;
+}
+
+.footer {
+    background-color: transparent;
+    margin: 30px 0;
+}
+
+.footer>li {
+    color: rgb(99, 96, 96);
+    font-weight: 600;
+}
+
+.footer>li:hover {
     color: black;
+    cursor: pointer;
 }
 
 
 /* Roasting page */
-.roast-div{
+.roast-div {
     display: flex;
-    padding: 10px;
 }
-.roast-1{
-    padding: 10px;
+
+.roast-1 {
     width: 400px;
+    padding-right: 10px;
 }
-.roast-img{
+
+.roast-img {
     display: flex;
 }
-.roast-img-div{
+
+.roast-img>section:first-child {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.roast-img-div {
     background-color: saddlebrown;
-    padding: 30px 30px;
+    padding: 20px 50px;
     margin: 0 20px;
     display: flex;
     width: 200px;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    height: fit-content;
 }
-.roast-img-div>img{
+
+.roast-img-div>img {
     height: 100px;
     width: 100px;
 }
-.roast-img-div>p{
+
+.roast-img-div>p {
     margin: 10px 0;
+}
+
+.roast-para {
+    text-align: left;
+}
+
+
+/* grinding page */
+
+.grind-div {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.grind-para {
+    padding-right: 20px;
+}
+
+.grind-para>p {
+    margin: 10px 0;
+}
+
+.grind-list>p {
+    margin: 10px 0;
+}
+
+.grind-list>ul {
+    margin: 0 30px;
+    list-style: url('./images/tiny-coffee-cup.gif');
+    list-style-image: 50px;
+}
+
+/* Brewing Page */
+
+.brewing-div>p {
+    margin: 10px 0;
+}
+
+.brewing-list>li>a {
+    color: brown;
+    font-size: 20px;
+}
+
+.brewing-contents>section {
+    margin: 20px 0;
+}
+
+.brewing-contents>section>h3 {
+    margin: 10px 0;
+    color: rgb(124, 35, 35);
+}
+
+.brewing-contents>section>p {
+    margin: 10px 0;
+    font-weight: 300;
+}
+
+/* drinks page */
+
+td,
+th {
+    border: 1px solid black;
+}
+
+table {
+    border-spacing: 0;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td,
+th {
+    border: 1px solid black;
+    width: 20%;
+    text-align: center;
+    padding: 5px;
+}
+
+.fieldset-div-1 {
+    display: flex;
+    flex-direction: column;
+}
+
+form>fieldset:first-child>div {
+    margin: 0 10px;
+}
+
+.fieldset-div-1>div {
+    margin: 10px 0;
+}
+
+.textarea {
+    display: flex;
+    flex-direction: column;
+}
+
+input,
+select {
+    padding: 5px;
+    font-size: 15px;
+}
+
+label {
+    font-size: 20px;
+}
+
+.drinks-div>label {
+    margin-right: 10px;
+}
+
+form>fieldset {
+    display: flex;
+    padding: 20px;
+    margin: 10px;
+}
+
+.text-area-div {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+textarea {
+    height: 100px;
+    width: 300px;
+    margin: 10px;
 }
